# applied_machine_learning_project

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/: 01_Home.py
src/pages/: 02_Demo.py  03_Sources.py
src/utils/: handler.py  logger.py
