[tool.poetry]
name = "applied-machine-learning-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
streamlit = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
    py310 = true
    line-length = 88
    exclude-extends = "*venv/"
